--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -88,8 +88,10 @@
                                                 <option value="20000" {% if request.GET.max_price == "20000" %}selected{% endif %}>Ksh 20000+</option>
                                             </select>
                                         </div>
-                                    </div> <!-- form-row.// -->
-                                    <button class="btn btn-block btn-primary">Apply</button>
+                                    </div> <!-- form-row.// --> 
+                                    <!-- add padding below button -->
+                                    <button class="btn btn-block btn-primary mb-3">Apply</button>
+                                     <a href="{% url 'store' %}" class="btn btn-outline-secondary">Clear Filters</a>    
                                 </form>
                             </div><!-- card-body.// -->
                         </div>
